Menues corrections et petit ménage dans les définitions de style (encore !), sans incidence notoire. Notamment : correctif de quelques alignements des textes, homogénéisation des codes couleurs hexadécimaux, et autres broutilles.
git-svn-id: svn://zone.spip.org/spip-zone/_squelettes_@3075 ac52e18a-acf5-0310-9fe8-c4428f23b10a

--- a/fraichdist/impression.css
+++ b/fraichdist/impression.css
@@ -7,7 +7,7 @@
    et on affiche l'URL cible a la suite du lien (!) */
 
 a, a:visited, a.spip_in, a.spip_out { 
-	color: #000; 
+	color: #000000;; 
 	text-decoration: underline; }
 	
 a:after {
@@ -26,7 +26,7 @@ a:after {
 .ps {
 	padding-top: 0.6em;
 	margin-top: 0.6em;
-	border-top: 1px dashed #666;}
+	border-top: 1px dashed #666666;}
 
 .notes {
 	margin-top: 0.6em;
